--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,8 @@
     <main>
         <article class="box">
             <h1>Gideon Salami</h1>
-            <div><a href="mailto:your.email@example.com">your-email@example.com</a></div>
+            <div><a href="mailto:your.email@example.com"> Gideon.Salami@studentambassadors.com
+            </a></div>
             
             <section class="box">
                 <h2>
@@ -21,9 +22,9 @@
                     Social media
                 </h2>
                 <ul>
-                    <li><a href="https://github.com/<handle>">@github_handle</a></li>
-                    <li><a href="https://linkedin.com/in/<handle>">@linkedin_handle</a></li>
-                    <li><a href="https://twitter.com/<handle>">@twitter_handle</a></li>
+                    <li><a href="https://github.com/<handle>">@SalamiTech</a></li>
+                    <li><a href="https://linkedin.com/in/<handle>">@GideonKofiSalami</a></li>
+                    <li><a href="https://twitter.com/<handle>">@gideonsalamii</a></li>
                 </ul>    
             </section>
             
@@ -31,7 +32,7 @@
                 <div class="education">
                     <h2>
                         <i class="fa fa-certificate" aria-hidden="true"></i>
-                        School name
+                        Central University
                     </h2>
                     <h3>Major</h3>
                     <ul>
